--- a/notebooks/01_dev.ipynb
+++ b/notebooks/01_dev.ipynb
@@ -1,6 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "30a4ce64-f067-433a-a5be-26a4d82abaff",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# Language Modeling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5fc1f96d-f7a6-41b2-9c3c-67b39a3bf2a6",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Imports & Inits"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "3d1145c7",
@@ -30,6 +50,14 @@
     "np.set_printoptions(precision=4)\n",
     "sns.set_style(\"darkgrid\")\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68870227-2abb-42e2-9b3c-9757f52bdf99",
+   "metadata": {},
+   "source": [
+    "## Data Setup"
    ]
   },
   {
@@ -72,6 +100,26 @@
    "source": [
     "onion_df = pd.read_csv(data_dir/'onion_headlines.csv')\n",
     "onion_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "8bf408ba-70ee-4c83-b08a-ec2189ccaf4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tokenizers.pre_tokenizers import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f0798acc-389d-4202-ae41-4da08d4e16fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizers = BertPreTokenizer()"
    ]
   }
  ],
