--- a/notebooks/01_dev.ipynb
+++ b/notebooks/01_dev.ipynb
@@ -89,7 +89,7 @@
     {
      "data": {
       "text/plain": [
-       "(14363, 1)"
+       "(14363, 2)"
       ]
      },
      "execution_count": 3,
@@ -98,28 +98,146 @@
     }
    ],
    "source": [
-    "onion_df = pd.read_csv(data_dir/'onion_headlines.csv')\n",
+    "onion_df = pd.read_csv(data_dir/'onion_headlines.csv', usecols=['text', 'length'])\n",
     "onion_df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "8bf408ba-70ee-4c83-b08a-ec2189ccaf4e",
+   "execution_count": 4,
+   "id": "2c01c3b1-14e4-47d3-bb06-a4f89df810cc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    14363.000000\n",
+       "mean        78.252106\n",
+       "std         31.010523\n",
+       "min          1.000000\n",
+       "25%         57.000000\n",
+       "50%         75.000000\n",
+       "75%         95.000000\n",
+       "max        335.000000\n",
+       "Name: length, dtype: float64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from tokenizers.pre_tokenizers import *"
+    "onion_df['length'].describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "f0798acc-389d-4202-ae41-4da08d4e16fa",
+   "execution_count": 5,
+   "id": "b82f8f78-a4e9-4a94-8926-7f5faf122b12",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>length</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>entire facebook staff laughs as man tightens p...</td>\n",
+       "      <td>61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>bold move: hulu has announced that they’re gon...</td>\n",
+       "      <td>134</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>despondent jeff bezos realizes he’ll have to w...</td>\n",
+       "      <td>101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>for men looking for great single women, online...</td>\n",
+       "      <td>147</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>kim jong-un wonders if nuclear threats distrac...</td>\n",
+       "      <td>91</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                text  length\n",
+       "0  entire facebook staff laughs as man tightens p...      61\n",
+       "1  bold move: hulu has announced that they’re gon...     134\n",
+       "2  despondent jeff bezos realizes he’ll have to w...     101\n",
+       "3  for men looking for great single women, online...     147\n",
+       "4  kim jong-un wonders if nuclear threats distrac...      91"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "tokenizers = BertPreTokenizer()"
+    "onion_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0d2544e-98da-4ac9-bb15-46a5248ad5e3",
+   "metadata": {},
+   "source": [
+    "## Checkpoint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "355172ae-ce7b-4ac3-97ae-0215387af0fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "126"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vocab = list(set('\\n'.join(onion_df['text'].tolist())))\n",
+    "len(vocab)"
    ]
   }
  ],
