--- a/notebooks/01_dev.ipynb
+++ b/notebooks/01_dev.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3d1145c7",
    "metadata": {
     "ExecuteTime": {
@@ -36,7 +36,7 @@
     "%autoreload 2\n",
     "%config IPCompleter.greedy=True\n",
     "\n",
-    "import pdb, sys, warnings, os, json\n",
+    "import pdb, sys, warnings, os, json, torch, re\n",
     "warnings.filterwarnings(action='ignore')\n",
     "\n",
     "from IPython.display import display, HTML\n",
@@ -44,6 +44,7 @@
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "from collections import Counter\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
@@ -54,160 +55,68 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68870227-2abb-42e2-9b3c-9757f52bdf99",
+   "id": "ed127615-7b0d-44f3-9807-2c80b23071fa",
    "metadata": {},
+   "source": [
+    "## Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d76eba4-5bdc-4b78-bf31-713a3a1e0752",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_bigram_counts(ax, bigram_counts, vocab):\n",
+    "  itos = {i:s for i,s in enumerate(vocab)}  \n",
+    "  ax.imshow(bigram_counts, cmap='Blues')\n",
+    "  for i in range(len(stoi)):\n",
+    "    for j in range(len(stoi)):\n",
+    "      chstr = f'{itos[i]}{itos[j]}'\n",
+    "      ax.text(j, i, chstr, ha='center', va='bottom', color='gray')\n",
+    "      ax.text(j, i, bigram_counts[i,j].item(), ha='center', va='top', color='gray')\n",
+    "  ax.axis('off')  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68870227-2abb-42e2-9b3c-9757f52bdf99",
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Data Setup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "11f21a12",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-09-29T19:55:19.925582Z",
-     "start_time": "2022-09-29T19:55:19.914176Z"
-    }
-   },
+   "execution_count": null,
+   "id": "8cc4b39f-c56a-4d74-b633-9d067178c70e",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = Path('../data')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "c145e0b3",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-09-29T19:55:19.955746Z",
-     "start_time": "2022-09-29T19:55:19.928824Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(14363, 2)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "onion_df = pd.read_csv(data_dir/'onion_headlines.csv', usecols=['text', 'length'])\n",
+    "try:\n",
+    "  onion_df = pd.read_csv('../data/cleaned_onion_headlines.csv')\n",
+    "except FileNotFoundError:\n",
+    "  onion_df = pd.read_csv('../data/original_onion_headlines.csv')\n",
+    "  onion_df['text'] = onion_df['text'].str.encode('ascii', 'ignore').str.decode('ascii')\n",
+    "  onion_df['text'] = onion_df['text'].apply(str.lower)\n",
+    "  onion_df['text'] = onion_df['text'].apply(lambda t: re.sub('[$=`+@*#_]', '', t))\n",
+    "  onion_df.to_csv('../data/cleaned_onion_headlines.csv', index=None)\n",
+    "\n",
     "onion_df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "2c01c3b1-14e4-47d3-bb06-a4f89df810cc",
+   "execution_count": null,
+   "id": "6ba21366-c9e9-479a-8e5f-b6822be70480",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "count    14363.000000\n",
-       "mean        78.252106\n",
-       "std         31.010523\n",
-       "min          1.000000\n",
-       "25%         57.000000\n",
-       "50%         75.000000\n",
-       "75%         95.000000\n",
-       "max        335.000000\n",
-       "Name: length, dtype: float64"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "onion_df['length'] = onion_df['text'].apply(len)\n",
     "onion_df['length'].describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "b82f8f78-a4e9-4a94-8926-7f5faf122b12",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>text</th>\n",
-       "      <th>length</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>entire facebook staff laughs as man tightens p...</td>\n",
-       "      <td>61</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>bold move: hulu has announced that they’re gon...</td>\n",
-       "      <td>134</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>despondent jeff bezos realizes he’ll have to w...</td>\n",
-       "      <td>101</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>for men looking for great single women, online...</td>\n",
-       "      <td>147</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>kim jong-un wonders if nuclear threats distrac...</td>\n",
-       "      <td>91</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                text  length\n",
-       "0  entire facebook staff laughs as man tightens p...      61\n",
-       "1  bold move: hulu has announced that they’re gon...     134\n",
-       "2  despondent jeff bezos realizes he’ll have to w...     101\n",
-       "3  for men looking for great single women, online...     147\n",
-       "4  kim jong-un wonders if nuclear threats distrac...      91"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "onion_df.head()"
    ]
   },
   {
@@ -220,24 +129,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "355172ae-ce7b-4ac3-97ae-0215387af0fe",
+   "execution_count": null,
+   "id": "5e330ce8-e357-49bc-8b64-4d019eb9d2c3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "126"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "vocab = list(set('\\n'.join(onion_df['text'].tolist())))\n",
+    "texts = onion_df['text'].tolist()\n",
+    "vocab = ['#'] + sorted(list(set(' '.join(texts))))\n",
+    "stoi = {s:i for i,s in enumerate(vocab)}\n",
+    "itos = {i:s for i,s in enumerate(vocab)}\n",
     "len(vocab)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb6d95d1-17ab-49af-8aeb-3579cc0829ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bigram_counts = torch.zeros(len(stoi), len(stoi), dtype=torch.int32)\n",
+    "for text in texts:\n",
+    "  chs = ['#'] + list(text) + ['#']\n",
+    "  for ch1, ch2 in zip(chs, chs[1:]):\n",
+    "    ix1 = stoi[ch1]\n",
+    "    ix2 = stoi[ch2]\n",
+    "    bigram_counts[ix1, ix2] += 1    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff5d4e9a-e21a-4ef5-8c09-f4ff685e2326",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1,1,figsize=(len(stoi),len(stoi)))\n",
+    "plot_bigram_counts(ax, bigram_counts, vocab)"
    ]
   }
  ],
