All working with new env

--- a/notebooks/01_bigram_lm.ipynb
+++ b/notebooks/01_bigram_lm.ipynb
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 9,
    "id": "231ce4d2-52ee-4fbf-93d6-e4bcd0a0400b",
    "metadata": {},
    "outputs": [
@@ -270,7 +270,7 @@
        "        0.0000e+00])"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 10,
    "id": "b29751b7-7e5a-4988-9b7d-63f1eef226e1",
    "metadata": {},
    "outputs": [],
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 11,
    "id": "c8d1c9dd-44a2-4d98-8338-0d450821ce1a",
    "metadata": {},
    "outputs": [
@@ -306,7 +306,7 @@
        "        True, True, True, True, True, True, True])"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,17 +317,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 12,
    "id": "16f884b4-0cc7-4524-b49e-1ec86c635fed",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'o'"
+       "'r'"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 13,
    "id": "b8854d3c-ef96-4a8e-87a2-567af74e9a85",
    "metadata": {},
    "outputs": [
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 14,
    "id": "8d94ab1e-6486-4daa-a3d2-ce5ebd8561db",
    "metadata": {},
    "outputs": [],
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 18,
    "id": "d1de70d2-fefc-4bc9-bd4a-766f11140323",
    "metadata": {},
    "outputs": [
@@ -417,89 +417,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "#h: 0.0404 -3.2094\n",
-      "hi: 0.1643 -1.8061\n",
-      "ig: 0.0294 -3.5260\n",
-      "gh: 0.0757 -2.5812\n",
-      "h : 0.1119 -2.1898\n",
-      " s: 0.0771 -2.5622\n",
-      "sc: 0.0227 -3.7840\n",
-      "ch: 0.1321 -2.0246\n",
-      "ho: 0.1433 -1.9429\n",
-      "oo: 0.0375 -3.2837\n",
-      "ol: 0.0430 -3.1476\n",
-      "le: 0.1635 -1.8109\n",
-      "er: 0.1422 -1.9506\n",
-      "rs: 0.0612 -2.7932\n",
-      "s : 0.3704 -0.9931\n",
-      " g: 0.0262 -3.6429\n",
-      "gi: 0.0572 -2.8609\n",
-      "iv: 0.0263 -3.6384\n",
-      "ve: 0.6267 -0.4672\n",
-      "en: 0.0848 -2.4676\n",
-      "n : 0.2069 -1.5757\n",
-      " d: 0.0390 -3.2454\n",
-      "de: 0.1799 -1.7153\n",
-      "et: 0.0362 -3.3183\n",
-      "te: 0.1191 -2.1276\n",
-      "en: 0.0848 -2.4676\n",
-      "nt: 0.1055 -2.2491\n",
-      "ti: 0.1130 -2.1805\n",
-      "io: 0.0640 -2.7488\n",
-      "on: 0.1646 -1.8044\n",
-      "n : 0.2069 -1.5757\n",
-      " f: 0.0542 -2.9158\n",
-      "fo: 0.1648 -1.8028\n",
-      "or: 0.1269 -2.0647\n",
-      "r : 0.1649 -1.8024\n",
-      " c: 0.0601 -2.8116\n",
-      "cu: 0.0317 -3.4509\n",
-      "ut: 0.1222 -2.1018\n",
-      "tt: 0.0227 -3.7841\n",
-      "ti: 0.1130 -2.1805\n",
-      "in: 0.2987 -1.2083\n",
-      "ng: 0.1686 -1.7805\n",
-      "g : 0.3810 -0.9649\n",
-      " c: 0.0601 -2.8116\n",
-      "cl: 0.0442 -3.1181\n",
-      "la: 0.0930 -2.3748\n",
-      "as: 0.0758 -2.5794\n",
-      "ss: 0.0434 -3.1379\n",
-      "s : 0.3704 -0.9931\n",
-      " d: 0.0390 -3.2454\n",
-      "du: 0.0253 -3.6752\n",
-      "ur: 0.1359 -1.9958\n",
-      "ri: 0.1017 -2.2853\n",
-      "in: 0.2987 -1.2083\n",
-      "ng: 0.1686 -1.7805\n",
-      "g : 0.3810 -0.9649\n",
-      " a: 0.0851 -2.4636\n",
-      "ac: 0.0492 -3.0114\n",
-      "ct: 0.0653 -2.7281\n",
-      "ti: 0.1130 -2.1805\n",
-      "iv: 0.0263 -3.6384\n",
-      "ve: 0.6267 -0.4672\n",
-      "e : 0.2119 -1.5515\n",
-      " s: 0.0771 -2.5622\n",
-      "sh: 0.0428 -3.1517\n",
-      "ho: 0.1433 -1.9429\n",
-      "oo: 0.0375 -3.2837\n",
-      "ot: 0.0393 -3.2377\n",
-      "ti: 0.1130 -2.1805\n",
-      "in: 0.2987 -1.2083\n",
-      "ng: 0.1686 -1.7805\n",
-      "g.: 0.0007 -7.2133\n",
-      ".#: 0.1004 -2.2986\n",
-      "log_likelihood=tensor(-177.6295)\n",
-      "nll=tensor(177.6295)\n",
-      "average nll 2.4333\n"
+      "log_likelihood=tensor(-2870245.2500)\n",
+      "nll=tensor(2870245.2500)\n",
+      "average nll 2.5354\n"
      ]
     }
    ],
    "source": [
     "log_likelihood = 0.\n",
     "n = 0\n",
-    "for text in [onion_headline]:\n",
+    "for text in texts:\n",
     "  chs = ['#'] + list(text) + ['#']\n",
     "  for ch1, ch2 in zip(chs, chs[1:]):\n",
     "    idx1 = stoi[ch1]\n",
@@ -507,7 +434,7 @@
     "    prob = bigram_probs[idx1, idx2]\n",
     "    logprob = torch.log(prob)\n",
     "    log_likelihood += logprob\n",
-    "    print(f\"{ch1}{ch2}: {prob:0.4f} {logprob:0.4f}\")\n",
+    "    # print(f\"{ch1}{ch2}: {prob:0.4f} {logprob:0.4f}\")\n",
     "    n += 1\n",
     "\n",
     "print(f\"{log_likelihood=}\")\n",
