--- a/notebooks/01_bigram_lm_counts.ipynb
+++ b/notebooks/01_bigram_lm_counts.ipynb
@@ -7,7 +7,7 @@
     "tags": []
    },
    "source": [
-    "# Language Modeling"
+    "# Bigram Language Modeling using frequency counts for generating Onion-like News Headlines"
    ]
   },
   {
