--- a/notebooks/02_bigram_lm_linear_nn.ipynb
+++ b/notebooks/02_bigram_lm_linear_nn.ipynb
@@ -49,6 +49,7 @@
     "import seaborn as sns\n",
     "\n",
     "from torch.nn import functional as F\n",
+    "import torch.nn as nn\n",
     "\n",
     "np.set_printoptions(precision=4)\n",
     "sns.set_style(\"darkgrid\")\n",
@@ -103,6 +104,10 @@
    "execution_count": 4,
    "id": "eb6d95d1-17ab-49af-8aeb-3579cc0829ee",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -249,12 +254,14 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "31b80485-5161-475e-9650-e8a7b4bdadb5",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f7567d28880>"
+       "<matplotlib.image.AxesImage at 0x7fbe63d33bb0>"
       ]
      },
      "execution_count": 7,
@@ -361,6 +368,10 @@
    "execution_count": 11,
    "id": "b7dbedb4-5446-475e-b311-4a243bad0386",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -1148,31 +1159,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "1576acd6-1b93-4591-8dad-740bae18d021",
+   "execution_count": 20,
+   "id": "3659b768-7bc6-4132-884b-4a76b0ce8c45",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.7308\n"
+      "Loss: 3.7265\n"
      ]
     }
    ],
    "source": [
-    "xenc = F.one_hot(xs, num_classes=len(vocab)).float() # input to the network: one-hot encoding\n",
-    "logits = (xenc @ W)\n",
-    "counts = logits.exp() # equivalent to bigram_counts\n",
-    "probs = counts/counts.sum(axis=1, keepdims=True)\n",
-    "loss = -probs[torch.arange(len(ys)), ys].log().mean()\n",
-    "print(f\"{loss.item():0.4f}\")"
+    "# xenc = F.one_hot(xs, num_classes=len(vocab)).float() # input to the network: one-hot encoding\n",
+    "# logits = (xenc @ W)\n",
+    "logits = W[xs]\n",
+    "\n",
+    "# counts = logits.exp() # equivalent to bigram_counts\n",
+    "# probs = counts/counts.sum(axis=1, keepdims=True)\n",
+    "# loss = -probs[torch.arange(len(ys)), ys].log().mean()\n",
+    "\n",
+    "loss = F.cross_entropy(logits, ys)\n",
+    "print(f\"Loss: {loss.item():0.4f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "a7f0d5db-8e8f-4037-8c06-be93af45925f",
+   "execution_count": 21,
+   "id": "5818e9f7-cb98-4998-bda2-84956f7c98fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1194,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "id": "cc7e5e20-bf1c-43e8-a3bf-8fb82a06e2f2",
    "metadata": {},
    "outputs": [],
@@ -1205,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "id": "43ab3554-8b43-4e56-831b-23027f2f713e",
    "metadata": {},
    "outputs": [
@@ -1239,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "30735fc3-1ae5-47c5-a198-b84b27cd6bc6",
    "metadata": {},
    "outputs": [
@@ -1247,9 +1262,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final Loss: 2.4885\n",
-      "CPU times: user 11.4 s, sys: 2.19 s, total: 13.6 s\n",
-      "Wall time: 7.65 s\n"
+      "Final Loss: 2.4947\n",
+      "CPU times: user 16.7 s, sys: 15.3 s, total: 31.9 s\n",
+      "Wall time: 32 s\n"
      ]
     }
    ],
@@ -1259,12 +1274,9 @@
     "# gradient descent\n",
     "for _ in range(n_epochs):\n",
     "  # forward pass\n",
-    "  xenc = F.one_hot(xs, num_classes=len(vocab)).float() # input to the NN: one-hot encoding\n",
-    "  logits = xenc @ W\n",
-    "  counts = logits.exp()\n",
-    "  probs = counts / counts.sum(1, keepdims=True)\n",
-    "  loss = -probs[torch.arange(num), ys].log().mean()\n",
-    "  # loss = -probs[torch.arange(num), ys].log().mean() + 0.01 * (W**2).mean()\n",
+    "  logits = W[xs]\n",
+    "  loss = F.cross_entropy(logits, ys)\n",
+    "  # loss = -F.cross_entropy(logits, ys) + 0.01 * (W**2).mean()\n",
     "  \n",
     "  # backward pass\n",
     "  W.grad = None # set grad to zero\n",
@@ -1279,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "36a717da-6876-466e-b6ae-8795f1ef1924",
    "metadata": {},
    "outputs": [],
@@ -1289,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 51,
    "id": "dfc87f88-2fa1-4f57-bb49-148652f079e1",
    "metadata": {},
    "outputs": [
@@ -1297,26 +1309,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sthag crifousesite hur anul angharlvetarincerarery upldicenet anctisu arco dizo ty spes lm dakepp s s comen me ie iplanousceetolllemit me tas carndo be caimow gal den bse s d m\n",
-      "fotasarthados b hay te h d fetownti andsintinancandn alelyoompg\n",
-      "s r f cexumide cefoalpern tty dviecly kn mas tistingre eershed s ine m d tacen itheeros urcofrik wsanduneratecang ca conns thed\n",
+      "sthag crifousesite hur anul angharmpetarincerarery upldicenet anctisu arco dizs ty spgo lm dakepp s s comen me ie iplanousceetolllemit me tas carndo be caimow gbe den bse s d m\n",
+      "fotasarthados b hay te h d fetownti andsintinancandn alelyoomph tar f cexweo p cefoalqurn tty dviecly klanas tistingre eershed s ine m d tacen itheeros urcofrik wsanduneratecang ca conns thed\n",
       "ne med tiny us hintivesamapeabur forer\n",
       "bsiofed mid cr\n",
-      "hus caudy f ere fo s ditsidah upantoun hertysteyst ome\n",
+      "hus caudy f ere fo s ditsidah upchroun hertysteyst ome\n",
       "novils ws higatiniooy piry tidvio ha alonlstilleins\n",
       "bean\n",
-      "r gertoco ficreax llingedesapilica babin athebu panco d satws on on lsthatan t o e roued astetseriten at lo binie incofi re jeghommamimbucke atom e h eatstye\n",
-      "encond pale in co cistits id peshere tes ffow ewinofay mioknelichoph vese\n",
-      "pouchabln chang hine ap pller ts meat heanary ppap t sunsat tay hontocryifoxtheveatowathemal s s fomintee\n",
-      "mifr s ointhed cheereve tirsal brkumissepa sss s con peshunshllifoin w woor thosople ther be ulo vinist taly flllan\n",
-      "ledes plyifo od mend selesning chan honth hathurecr uplesomusncathes\n",
-      "n pomuterer sokre s bash ge r inns tsple inort s ho terild stos m hineerenlif f rul d ibin tite s spla\n",
-      "couthash m il ky ches jas lone d fl ustlere s ur covende is mefie ceet mesyo thouplum famar whistookaracex asus hely\n",
+      "r gertoco ficreax llingedesapilica babin athebu panco d satws on on lsthatan t o e roued astetseriten at lo binie incofi re jingommamimds on atom e h eatstye\n",
+      "deathe pale in cp cistits id peshere tes ffow ewinofay miokmelichoph vese\n",
+      "pouchablod k jolepin ao pller ts meat heanary ppap t sunsat tay hontocryifoxtheveatowathemal s s fomintee\n",
+      "mifr s ointhed cheereve tirsal brkveprrgha sss s con pgopunshllifoin w woor thosople ther be ulo vinist taly flllan indes plyifo od mend selesning chan honth hathurecr uplesomusncathes\n",
+      "n pomuterer sokre s bash ge r inns tsple inortas ho terild stos m hineerenlif f rul d ibin tite s sque\n",
+      "couthash m il kze les jas lone d fl ustlere s ur covende is mefie ceet mhoyo thouplum famar whistookaracex asus hely\n",
       "loplize mis\n",
       "ndsly\n",
       "ke en by s in re t\n",
-      "jis cherlmesthain or s uleesouray tcow acmary foupoplinkeeaile\n",
-      "chetecevocequil coumadeag autas carky h he woushus trberore lalesiocaleram\n"
+      "jkn cherlmesthain or s uleesouray tcow acndizeasthingenkeeaile\n",
+      "chetecevocequil coumadeag autar carkzed\n",
+      "in woushus trberore lalesiocaleram\n",
+      "st s pretre wal ngezas fid reaisinstone ceste tediserads lbon sofbas bamalitrsofe hldametho aarungrlaqutrs ben s g dilbl\n"
      ]
     }
    ],
@@ -1326,11 +1338,11 @@
     "for _ in range(n_headlines):\n",
     "  idx = 0\n",
     "  ai_onion = []\n",
-    "  while True:\n",
-    "    xenc = F.one_hot(torch.tensor([idx]), num_classes=len(vocab)).float()\n",
-    "    logits = xenc @ W\n",
-    "    counts = logits.exp()\n",
-    "    p = counts / counts.sum(1, keepdims=True)\n",
+    "  while True:    \n",
+    "    # xenc = F.one_hot(torch.tensor([idx]), num_classes=len(vocab)).float()\n",
+    "    # logits = xenc @ W\n",
+    "    logits = W[idx].unsqueeze(0)\n",
+    "    p = logits.exp() / logits.exp().sum(1, keepdims=True)\n",
     "    idx = torch.multinomial(p, num_samples=1, replacement=True, generator=g).item()\n",
     "    # idx = torch.multinomial(torch.ones(len(vocab))/len(vocab), num_samples=1, replacement=True, generator=g).item()\n",
     "    ai_onion.append(itos[idx])\n",
