--- a/notebooks/01_bigram_lm_counts.ipynb
+++ b/notebooks/01_bigram_lm_counts.ipynb
@@ -7,7 +7,9 @@
     "tags": []
    },
    "source": [
-    "# Bigram Language Modeling using frequency counts for generating Onion-like News Headlines"
+    "# Bigram Language Modeling using frequency counts for generating Onion-like News Headlines\n",
+    "\n",
+    "Based on Andrej Karpathy's first half Youtube lecture [The spelled-out intro to language modeling: building makemore](https://www.youtube.com/watch?v=PaCmpygFfXo)"
    ]
   },
   {
