--- a/notebooks/02_bigram_lm_linear_nn.ipynb
+++ b/notebooks/02_bigram_lm_linear_nn.ipynb
@@ -7,13 +7,16 @@
     "tags": []
    },
    "source": [
-    "# Bigram Language Modeling using a basic Neural Network for generating Onion-like News Headlines"
+    "# Bigram Language Modeling using a basic Neural Network for generating Onion-like News Headlines\n",
+    "\n",
+    "Based on Andrej Karpathy's second half Youtube lecture [The spelled-out intro to language modeling: building makemore](https://www.youtube.com/watch?v=PaCmpygFfXo)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "5fc1f96d-f7a6-41b2-9c3c-67b39a3bf2a6",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1250,6 +1253,14 @@
     "# initialize the NN\n",
     "g = torch.Generator(device=device).manual_seed(2468975301)\n",
     "W = torch.randn((len(vocab), len(vocab)), generator=g, requires_grad=True, device=device)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb528407-6129-4623-af79-82e88a7ce1be",
+   "metadata": {},
+   "source": [
+    "Ridge regression squared norm of the parameters are penalized."
    ]
   },
   {
