--- a/notebooks/03_mlp.ipynb
+++ b/notebooks/03_mlp.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "8cc4b39f-c56a-4d74-b633-9d067178c70e",
    "metadata": {},
    "outputs": [],
@@ -70,24 +70,167 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0d2544e-98da-4ac9-bb15-46a5248ad5e3",
+   "id": "1b2d18b4-3070-4e91-903b-6d38d96e695f",
    "metadata": {},
    "source": [
-    "## Bigram Language Model"
+    "## Functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5e330ce8-e357-49bc-8b64-4d019eb9d2c3",
+   "execution_count": 17,
+   "id": "a9a6ccf6-aaaa-4406-9a38-c8cfab90bfe6",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def build_dataset(texts, stoi, block_size=3):\n",
+    "  X,Y = [],[]\n",
+    "\n",
+    "  for text in texts:\n",
+    "    context = [0] * block_size\n",
+    "    for ch in text:\n",
+    "      idx = stoi[ch]\n",
+    "      X.append(context)\n",
+    "      Y.append(idx)\n",
+    "      context = context[1:] + [idx]\n",
+    "\n",
+    "  return torch.tensor(X), torch.tensor(Y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0d2544e-98da-4ac9-bb15-46a5248ad5e3",
+   "metadata": {},
+   "source": [
+    "## Load the data & Build the Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5e330ce8-e357-49bc-8b64-4d019eb9d2c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "texts = onion_df['text'].tolist()\n",
     "vocab = ['#'] + sorted(list(set(' '.join(texts))))\n",
     "stoi = {s:i for i,s in enumerate(vocab)}\n",
     "itos = {i:s for i,s in enumerate(vocab)}\n",
     "len(vocab)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "e6cc6b97-e52a-494b-b5f4-02383439f86c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "entire facebook staff laughs as man tightens privacy settings\n",
+      "### -----> e\n",
+      "##e -----> n\n",
+      "#en -----> t\n",
+      "ent -----> i\n",
+      "nti -----> r\n",
+      "tir -----> e\n",
+      "ire ----->  \n",
+      "re  -----> f\n",
+      "e f -----> a\n",
+      " fa -----> c\n",
+      "fac -----> e\n",
+      "ace -----> b\n",
+      "ceb -----> o\n",
+      "ebo -----> o\n",
+      "boo -----> k\n",
+      "ook ----->  \n",
+      "ok  -----> s\n",
+      "k s -----> t\n",
+      " st -----> a\n",
+      "sta -----> f\n",
+      "taf -----> f\n",
+      "aff ----->  \n",
+      "ff  -----> l\n",
+      "f l -----> a\n",
+      " la -----> u\n",
+      "lau -----> g\n",
+      "aug -----> h\n",
+      "ugh -----> s\n",
+      "ghs ----->  \n",
+      "hs  -----> a\n",
+      "s a -----> s\n",
+      " as ----->  \n",
+      "as  -----> m\n",
+      "s m -----> a\n",
+      " ma -----> n\n",
+      "man ----->  \n",
+      "an  -----> t\n",
+      "n t -----> i\n",
+      " ti -----> g\n",
+      "tig -----> h\n",
+      "igh -----> t\n",
+      "ght -----> e\n",
+      "hte -----> n\n",
+      "ten -----> s\n",
+      "ens ----->  \n",
+      "ns  -----> p\n",
+      "s p -----> r\n",
+      " pr -----> i\n",
+      "pri -----> v\n",
+      "riv -----> a\n",
+      "iva -----> c\n",
+      "vac -----> y\n",
+      "acy ----->  \n",
+      "cy  -----> s\n",
+      "y s -----> e\n",
+      " se -----> t\n",
+      "set -----> t\n",
+      "ett -----> i\n",
+      "tti -----> n\n",
+      "tin -----> g\n",
+      "ing -----> s\n",
+      "ngs -----> #\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([62, 3]), torch.Size([62]))"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "block_size = 3 # contenxt length: how many characters do we take to predict the next character\n",
+    "X,Y = [],[]\n",
+    "\n",
+    "for text in texts[:1]:\n",
+    "  context = [0] * block_size\n",
+    "  print(text)\n",
+    "  for ch in text + '#':\n",
+    "    idx = stoi[ch]\n",
+    "    X.append(context)\n",
+    "    Y.append(idx)\n",
+    "    print(f\"{''.join(itos[i] for i in context)} -----> {itos[idx]}\")\n",
+    "    context = context[1:] + [idx]\n",
+    "X,Y = torch.tensor(X),torch.tensor(Y)\n",
+    "X.shape, Y.shape"
    ]
   },
   {
